# MiningOperations

./: .gitignore  CMakeLists.txt  README.md  findirrlicht.license
docs/: uml.class.violet.html
src/inih/: INIReader.cpp  ini.c
src/objects/: IObject.cpp
src/objects/items/: IItem.cpp
src/objects/items/armor/: ChestArmor.cpp  FootArmor.cpp  HeadArmor.cpp  IArmor.cpp  LegArmor.cpp
src/objects/items/tools/: Axe.cpp  Bow.cpp  Hoe.cpp  ITool.cpp  Pickaxe.cpp  Shovel.cpp  Sword.cpp
